--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
+  flutter_screenutil: ^5.9.3
+  dartz: ^0.10.1
+  go_router: ^14.3.0
+  image_picker: ^1.1.2
+  google_fonts: ^6.2.1
+  flutter_localization: ^0.2.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
