--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_localization: ^0.2.2
   flutter_secure_storage: ^9.2.2
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
