--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_localization: ^0.2.2
   flutter_secure_storage: ^9.2.2
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
