--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^8.0.2
   shimmer: ^3.0.0
+  barcode_widget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
